--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <body>
         <div class="terminal">
             <ul id="commands"></ul>
-            <input id="commandline" type="text">
-            <button id="temp_btn">enter</button>
+            <input id="user_input" type="text">
         </div>
         
         <script src="scr/script.js"></script>
