--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     </head>
     <body>
         <div class="terminal">
-            <div id="terminal_outputs">
-                <span>Welcome to the terminal</span>
+            <div id="terminal_content" class="terminal-content">
+                <div id="terminal_outputs">
+                    <span>Welcome to the terminal</span>
+                </div>
+                <input autofocus class="user_input" id="user_input" type="text">
             </div>
-            <input id="user_input" type="text">
         </div>
         
         <script src="scr/script.js"></script>
