--- a/index.html
+++ b/index.html
@@ -7,11 +7,27 @@
     </head>
     <body>
         <div class="terminal">
+            <div class="row terminal-bar">
+                <div class="close"></div>
+                <div class="min"></div>
+                <div class="max"></div>
+                <span class="terminal-bar-text">Brian's profolio terminal</span>
+            </div>
+
             <div id="terminal_content" class="terminal-content">
-                <div id="terminal_outputs">
-                    <span>Welcome to the terminal</span>
+                <div id="terminal_outputs" class="column">
+                    <span class="output">Type " <span class="command-keyword">help</span> " for supported commands</span>
                 </div>
-                <input autofocus class="user_input" id="user_input" type="text">
+                <div class="row">
+                    <span>➜ </span>
+                    <input 
+                        onblur="this.focus()" 
+                        autofocus 
+                        class="user_input" 
+                        id="user_input" 
+                        type="text" 
+                        autocomplete="off">
+                </div>
             </div>
         </div>
         
