--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
                 </div>
             </div>
         </div>
+
+        <div class="footer">
+            <p>Made for DEV PSU.</p>
+        </div>
         
         <script src="scr/script.js"></script>
     </body>
